Bug 281397 - Translation catalog is not loaded
Summary: Translation catalog is not loaded
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-05 13:20 UTC by Albert Astals Cid
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2011-09-05 13:20:14 UTC
Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

The Messages.sh at kde:telepathy-contact-list extracts messages to a catalog named telepathy-contactslist-prototype that then is never loaded by the application

Reproducible: Always

Steps to Reproduce:
 * Read details


Expected Results:  
 * Code loads the proper catalog it created

OS: Linux (x86_64) release 3.0-ARCH
Compiler: gcc
Comment 1 Martin Klapetek 2011-09-13 16:08:07 UTC
I know virtually nothing about that stuff. Is it enough if I change the string in Messages.sh to the contact list executable?
Comment 2 Albert Astals Cid 2011-09-13 17:35:55 UTC
Read the documentation of KComponentData constructors
Comment 3 Martin Klapetek 2011-09-15 14:53:51 UTC
Git commit 2962062ce4ac85264dd9ff0ffcc35bb1c65b5097 by Martin Klapetek.
Committed on 15/09/2011 at 16:52.
Pushed by mklapetek into branch 'master'.

Fix loading of translation catalog

Reviewed-by: Dario Freddi
BUG: 281397

M  +1    -1    Messages.sh
M  +1    -1    main.cpp

http://commits.kde.org/telepathy-contact-list/2962062ce4ac85264dd9ff0ffcc35bb1c65b5097