Fix loading of translation catalog

Reviewed-by: Dario Freddi
BUG: 281397